@@ -1,4 +1,4 @@
-.TH RESCAN\-SCSI\-BUS.SH "1" "January 2022" "rescan\-scsi\-bus.sh" "User Commands"
+.TH RESCAN\-SCSI\-BUS.SH "1" "April 2022" "rescan\-scsi\-bus.sh" "User Commands"
 .SH NAME
 rescan-scsi-bus.sh \- script to add and remove SCSI devices without rebooting
 .SH SYNOPSIS
@@ -7,12 +7,12 @@ rescan-scsi-bus.sh \- script to add and remove SCSI devices without rebooting
 [\fI\-\--channels=CLIST\fR] [\fI\-\-color\fR] [\fI\-d\fR] [\fI\-\-flush\fR]
 [\fI\-f\fR] [\fI\-\-forceremove\fR] [\fI\-\-forcerescan\fR] [\fI\-\-help\fR]
 [\fI\-\-hosts=HLIST\fR] [\fI\-\-ids=TLIST\fR] [\fI\-\-ignore\-rev\fR]
-[\fI\-\-issue\-lip\fR] [\fI\-i\fR] [\fI\-\-issue\-lip\-wait=SECS\fR] [\fI\-I SECS\fR]
-[\fI\-l\fR]
-[\fI\-L NUM\fR] [\fI\-\-largelun\fR] [\fI\-\-luns=LLIST\fR] [\fI\-m\fR]
-[\fI\-\-multipath\fR] [\fI\-\-nooptscan\fR] [\fI\-\-nosync\fR]
-[\fI\-\-remove\fR] [\fI\-\-removelun2\fR] [\fI\-\-resize\fR]
-[\fI\-\-sparselun\fR] [\fI\-\-sync\fR] [\fI\-\-update\fR] [\fI\-\-version\fR]
+[\fI\-\-issue\-lip\fR] [\fI\-i\fR] [\fI\-\-issue\-lip\-wait=SECS\fR]
+[\fI\-I SECS\fR] [\fI\-l\fR] [\fI\-L NUM\fR] [\fI\-\-largelun\fR]
+[\fI\-\-luns=LLIST\fR] [\fI\-m\fR] [\fI\-\-multipath\fR] [\fI\-\-nooptscan\fR]
+[\fI\-\-nosync\fR] [\fI\-\-remove\fR] [\fI\-\-removelun2\fR]
+[\fI\-\-resize\fR] [\fI\-\-sparselun\fR] [\fI\-\-sync\fR]
+[\fI\-\-timeout=SECS\fR] [\fI\-\-update\fR] [\fI\-\-version\fR]
 [\fI\-\-wide\fR] [\fIHOST1 \fR[\fIHOST2 \fR...]]
 .SH OPTIONS
 Option are ordered by their long name. Those without a long name are ordered
@@ -99,6 +99,10 @@ tell kernel to support sparse LUN numbering
 .TP
 \fB\-\-sync\fR
 issue a sync [default: sync if remove]
+.TP
+\fB\-t\fR, \fB\-\-timeout=SECS\fR
+timeout for testing if device is online. Test is skipped if 0 [default:
+30 (seconds)]
 .TP
 \fB\-u\fR, \fB\-\-update\fR
 look for existing disks that have been remapped
